# WonderCrab

./: .gitignore  Cargo.toml  lcov.info  readme.md
src/: cartridge.rs  cpu.rs  dma.rs  keypad.rs  main.rs  soc.rs
src/bus/: io_bus.rs  mem_bus.rs  mod.rs
src/bus/io_bus/: eeprom.rs  keypad.rs
src/cartridge/: bank_access.rs  cart_ports.rs
src/cpu/: opcode.rs  v30mz.rs
src/cpu/v30mz/: alu_ops.rs  bit_ops.rs  block_ops.rs  ctrl_ops.rs  mem_ops.rs  util.rs  v30mz_test.rs
src/display/: display_control.rs  mod.rs  screen.rs  sprite.rs
src/dma/: gdma.rs  mod.rs  sdma.rs
src/soc/: test.rs
src/sound/: channel.rs  mod.rs
