[package]
name = "wonderswan"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.1"
mimalloc = "0.1.46"
once_cell = "1.21.3"
sdl2 = "0.37.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
codegen-units = 1
target-cpu = "native"
